tests/baselines/reference/comparisonOperatorWithNumberOperand.errors.txt
comparisonOperatorWithNumberOperand.ts(3,1): error TS2365: Operator '>=' cannot be applied to types 'number | Promise<number>' and 'number'.


==== comparisonOperatorWithNumberOperand.ts (1 errors) ====
    // repro #52036
    declare const t1: number | Promise<number>
    t1 >= 0 // error
    ~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number | Promise<number>' and 'number'.
!!! related TS2773 comparisonOperatorWithNumberOperand.ts:3:1: Did you forget to use 'await'?
    